# web_crawler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Desktop 2023.01.24 - 23.29.01.01_Trim.mp4.REMOVED.git-id  Neo4j.gif.REMOVED.git-id  Node_Generator.py  README.md  RTB.py  RTB_Class.py  Rts.py  Untitled Diagram.drawio  ValidatorClass.py  WebCrawler.py  Webigator.py  dev.sh  feeder_app.py  helm_app_install.sh  installer.sh  networksX.py  oldcrawler.py  refresh-app.sh  wcrawl.py
.github/workflows/: docker-image.yml  docker-publish-master.yml  docker-publish-microservice.yml  docker-publish.yml  pr-title.yml
docs/: api-reference.md  architecture.md  deployment.md  development.md  neo4j-graph-model.md
feeder/: Cargo.toml  Dockerfile  feeder.py  feeder_test.py  requirements.txt
feeder-app/docker/: Dockerfile  feeder_app.py  requirements.txt
feeder-app/k8s/: create-ns.yaml  deployment-file.yaml  expose-service.yaml
feeder-rs/: Cargo.toml
feeder-rs/src/: config.rs  dns.rs  error.rs  job.rs  main.rs  url_normalize.rs
feeder/docker/: Dockerfile  debug.py  entrypoint.sh  feeder.py  requirements.txt
feeder/k8s/: Chart.yaml  deployment-file.yaml  dev_values.yaml  kubectl-apply.sh  values.yaml
feeder/k8s/templates/: create-ns.yaml  deployment-file.yaml  expose-service.yaml
feeder/src/: config.rs  crawler.rs  dns.rs  health.rs  job.rs  main.rs  neo4j_client.rs
feeder_standalone/docker/: Dockerfile  feeder.py
feeder_standalone/feeder/docker/: feeder.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx  GraphView.tsx  ProgressBar.tsx  StatsView.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: CrawlDetail.tsx  CrawlList.tsx  Dashboard.tsx  NewCrawl.tsx  NotFound.tsx
frontend/src/types/: api.ts
legacy_crawler/: Dockerfile  README.md
legacy_crawler/docker/: Node_Generator.py  RTB.py  WebCrawler.py  Webigator.py  networksX.py
manager/: Cargo.toml  Dockerfile  manager.py
manager/docker/: Dockerfile  data.html  dockerfile  iana_top_level_domains.txt  index.html  manager.py  manager_test.py  requirements.txt
manager/k8s/: create-ns.yaml  deployment-file.yaml  dev_values.yaml  expose-service.yaml  kubectl-apply.sh  values.yaml
manager/k8s/templates/: create-ns.yaml  deployment-file.yaml  expose-service.yaml
manager/src/: config.rs  main.rs  state.rs
manager/src/models/: crawl.rs  graph.rs  mod.rs
manager/src/routes/: crawl.rs  graph.rs  health.rs  mod.rs  status.rs  ws.rs
manager/src/services/: crawl_service.rs  graph_service.rs  mod.rs
memgraph-lab/docker/: Dockerfile  memgraph-server-dns-name.txt
memgraph-lab/k8s/: Chart.yaml  values.yaml
memgraph-lab/k8s/templates/: deployment-file.yaml  expose-service.yaml
memgraph/k8s/: values.yaml
memgraph/k8s/templates/: configmap.yaml  nodepod_service.yaml  pv.yaml  pvc.yaml  service.yaml  statefulset.yaml
memgraph/templates/: clusterip_service.yaml  statefulset.yaml
memgraph_lab/docker/: Dockerfile  memgraph-desktop-shortcut.desktop
memgraph_lab/k8s/: Chart.yaml  deployment-file.yaml  expose-service.yaml
memgraph_lab/k8s/templates/: deployment-file.yaml  expose-service.yaml
neo4j/k8s/: Chart.yaml  install_neo4j.sh  installation_notes.txt  pvc.yaml  values.yaml
neo4j/k8s/templates/: expose-service.yaml
redis/: kubectl-apply.sh
shared/: Cargo.toml
shared/src/: crawler.rs  dns.rs  error.rs  lib.rs  neo4j_client.rs  schema.rs  url_normalize.rs
web-crawler/: Chart.yaml  local-values.yaml  values.yaml
web-crawler/charts/: neo4j-5.26.21.tgz
web-crawler/charts/feeder/: Chart.yaml  values.yaml
web-crawler/charts/feeder/templates/: deployment-file.yaml
web-crawler/charts/frontend/: Chart.yaml  values.yaml
web-crawler/charts/frontend/templates/: deployment-file.yaml  expose-service.yaml
web-crawler/charts/manager/: Chart.yaml  values.yaml
web-crawler/charts/manager/templates/: deployment-file.yaml  expose-service.yaml
web-crawler/templates/: NOTES.txt
