[workspace]
members = ["shared", "feeder", "manager"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
neo4rs = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
regex = "1"
rand = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
