[package]
name = "manager"
version = "1.0.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
neo4rs = { workspace = true }
reqwest = { workspace = true, default-features = false }
hickory-resolver = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
