[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
neo4rs = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
