[package]
name = "shared"
version = "1.0.0"
edition = "2021"
description = "Shared library for web-crawler services"

[dependencies]
reqwest = { workspace = true, default-features = false }
hickory-resolver = { workspace = true }
neo4rs = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
